[project]
name = "repl-nix-ai-integration-prototype"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "nltk>=3.9.1",
    "openai==1.3.5",
    "pandas>=2.2.3",
    "sqlalchemy>=2.0.36",
    "werkzeug>=3.1.3",
    "psycopg2-binary>=2.9.10",
    "email-validator>=2.2.0",
    "openpyxl>=3.1.5",
    "flask-mail>=0.10.0",
    "apscheduler>=3.11.0",
    "python-dotenv>=1.0.1",
    "flask-migrate>=4.0.7",
    "weasyprint>=63.1",
    "flask-apscheduler>=1.13.1",
    "tenacity>=9.0.0",
    "alembic",
    "flask-wtf>=1.2.2",
    "python-levenshtein>=0.26.1",
    "numpy>=2.2.0",
    "scikit-learn>=1.6.0",
    "oauthlib>=3.2.2",
    "pyotp>=2.9.0",
    "qrcode>=8.0",
    "pillow>=11.0.0",
    "flask-cors>=5.0.0",
]
